# svt-av1

./: .cleanup.sh  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  appveyor.yml
.ci/: ci.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  cppcheck.yml  macos.yml  patches.yml  sanitizers.yml  style-check.yml  svt-av1.yml
Config/: Sample.cfg
Docs/: Appendix-CDEF.md  Appendix-Global-Motion.md  svt-av1-encoder-design.md  svt-av1_encoder_user_guide.md
Source/API/: EbApi.h  EbCodec.h  EbDebugMacros.h  EbEncApi.h  EbSvtAv1.h  EbSvtAv1Dec.h  EbSvtAv1Enc.h  EbSvtAv1ErrorCodes.h  EbSvtAv1ExtFrameBuf.h
Source/App/: EbAppConfig.c  EbAppContext.c  EbAppInputy4m.c  EbAppProcessCmd.c
Source/App/DecApp/: CMakeLists.txt  EbDecAppMain.c
Source/App/EncApp/: CMakeLists.txt  EbAppConfig.c  EbAppConfig.h  EbAppContext.c  EbAppContext.h  EbAppFifo.c  EbAppMain.c  EbAppProcessCmd.c
Source/Lib/Codec/: CMakeLists.txt  EbAdaptiveMotionVectorPrediction.c  EbCdef.c  EbCdef.h  EbCdefProcess.c  EbCdefProcess.h  EbCodingLoop.c  EbCodingUnit.h  EbDefinitions.h  EbDlfProcess.c  EbDlfProcess.h  EbEncDecProcess.c  EbEncDecResults.h  EbEncHandle.c  EbEntropyCoding.c  EbEntropyCodingProcess.c  EbIntraPrediction.c  EbModeDecision.c  EbModeDecisionProcess.h  EbNeighborArrays.c  EbNeighborArrays.h  EbPacketizationProcess.c  EbPictureControlSet.c  EbPictureManagerProcess.c  EbPictureOperators.c  EbPictureOperators.h  EbProductCodingLoop.c  EbRestProcess.c  EbRestProcess.h  EbRestoration.c  EbRestorationPick.c  EbThreads.h  aom_dsp_rtcd.h
Source/Lib/Common/: CMakeLists.txt
Source/Lib/Common/ASM_AVX2/: CMakeLists.txt  EbBlend_a64_mask_avx2.c  EbCdef_AVX2.c  EbCombinedAveragingSAD_Intrinsic_AVX2.c  EbComputeSAD_AVX2.h  EbComputeSAD_Intrinsic_AVX2.c  EbHighbdIntraPrediction_AVX2.c  EbIntraPrediction_Intrinsic_AVX2.c  EbNoiseExtractAVX2.c  EbNoiseExtractAVX2.h  EbPackUnPack_Intrinsic_AVX2.c  EbPictureOperators_AVX2.h  EbPictureOperators_Intrinsic_AVX2.c  EbRestorationPick_AVX2.c  EbTransforms_Intrinsic_AVX2.c  cfl_avx2.c  convolve_avx2.c  highbd_fwd_txfm_avx2.c  highbd_inv_txfm_avx2.c  selfguided_avx2.c  variance_avx2.c
Source/Lib/Common/ASM_AVX512/: EbPictureOperators_Intrinsic_AVX512.c  highbd_fwd_txfm_AVX512.c
Source/Lib/Common/ASM_SSE2/: CMakeLists.txt  EbAvcStyleMcp_Intrinsic_SSE2.c  EbComputeMean_Intrinsic_SSE2.c  EbDeblockingFilter_Intrinsic_SSE2.c  EbIntraPrediction_AV1_Intrinsic_SSE2.c  EbMcp_SSE2.h  EbMeSadCalculation_SSE2.h  EbPackUnPack_Intrinsic_SSE2.c  EbPictureOperators_Intrinsic_SSE2.c  EbPictureOperators_SSE2.h  EbTransforms_Intrinsic_SSE2.c  encodetxb_sse2.c  synonyms.h
Source/Lib/Common/ASM_SSE4_1/: CMakeLists.txt  EbBlend_a64_mask_sse4.c  EbComputeSAD_Intrinsic_SSE4_1.c  EbComputeSAD_SSE4_1.h  EbPictureOperators_SSE4_1.h  EbTemporalFiltering_sse4.c  EbTransforms_Intrinsic_SSE4_1.c  av1_txfm_sse4.h  highbd_inv_txfm_sse4.c
Source/Lib/Common/ASM_SSSE3/: CMakeLists.txt  EbAvcStyleMcp_Intrinsic_SSSE3.c  EbMcp_Intrinsic_SSSE3.c  EbTransforms_Intrinsic_SSSE3.c  av1_inv_txfm_ssse3.c  intrapred_ssse3.c
Source/Lib/Common/C_DEFAULT/: CMakeLists.txt  EbPackUnPack_C.c  EbPackUnPack_C.h  EbPictureOperators_C.c
Source/Lib/Common/Codec/: CMakeLists.txt  EbAdaptiveMotionVectorPrediction.c  EbAdaptiveMotionVectorPrediction.h  EbApiSei.h  EbAvailability.c  EbAvcStyleMcp.c  EbAvcStyleMcp.h  EbBitstreamUnit.c  EbBlend_a64_mask.c  EbCabacContextModel.c  EbCabacContextModel.h  EbCdef.c  EbCdefProcess.c  EbCodingLoop.c  EbCodingLoop.h  EbCodingUnit.c  EbCodingUnit.h  EbComputeSAD.h  EbDeblockingFilter.c  EbDefinitions.h  EbDlfProcess.c  EbEncDecProcess.c  EbEncDecResults.h  EbEncDecSegments.c  EbEncDecSegments.h  EbEncodeContext.c  EbEncodeContext.h  EbEntropyCoding.c  EbEntropyCoding.h  EbEntropyCodingProcess.c  EbEntropyCodingResults.h  EbFullLoop.c  EbFullLoop.h  EbInitialRateControlProcess.c  EbInitialRateControlReorderQueue.c  EbInterPrediction.c  EbIntraPrediction.c  EbIntraPrediction.h  EbInvTransforms.c  EbLambdaRateTables.h  (+90 more)
Source/Lib/Decoder/: CMakeLists.txt  SvtAv1Dec.def  pkg-config.pc.in
Source/Lib/Decoder/Codec/: CMakeLists.txt  EbDecHandle.c  EbDecInterPrediction.c  EbDecIntraPrediction.c  EbDecLF.c  EbDecObmc.c  EbDecParseBlock.c  EbDecParseInterBlock.c  EbDecParseObu.c  EbDecParseObuUtil.h  EbDecPicMgr.c  EbDecProcessBlock.c  EbDecSuperRes.c
Source/Lib/Encoder/: CMakeLists.txt  SvtAv1Enc.def  pkg-config.pc.in
Source/Lib/Encoder/ASM_AVX2/: EbBlend_a64_mask_avx2.c  EbCombinedAveragingSAD_Intrinsic_AVX2.c  EbComputeSAD_Intrinsic_AVX2.c  EbTemporalFiltering_AVX2.c  aom_subpixel_8t_intrin_avx2.c  convolve_avx2.c  corner_match_avx2.c  highbd_quantize_intrin_avx2.c  obmc_sad_avx2.c  obmc_variance_avx2.c  palette_avx2.c  sse_avx2.c
Source/Lib/Encoder/ASM_AVX512/: EbComputeSAD_Intrinsic_AVX512.c
Source/Lib/Encoder/ASM_SSE2/: EbDeblockingFilter_Intrinsic_SSE2.c  EbDeblockingFilter_SSE2.h  aom_subpixel_8t_sse2.asm  highbd_subtract_sse2.c  highbd_variance_impl_sse2.asm  highbd_variance_sse2.c  subtract_sse2.asm  variance_sse2.c
ffmpeg_plugin/: 0001-Add-ability-for-ffmpeg-to-run-svt-av1-with-svt-hevc.patch
gstreamer-plugin/: CMakeLists.txt  README.md  gstsvtav1enc.c
snap/: snapcraft.yaml
test/: .clang-format  BitstreamReaderMock.h  CMakeLists.txt  CompoundUtilTest.cc  DeblockTest.cc  EbBlend_a64_mask_1d_test.cc  EbBlend_a64_mask_test.cc  EbNNPredictTests.cc  GlobalMotionUtilTest.cc  InvTxfm2dAsmTest.cc  OBMCSadTest.cc  OBMCVarianceTest.cc  PackUnPackTest.cc  PaletteModeUtilTest.cc  PictureAdditionTest.cc  PsnrTest.cc  QuantAsmTest.cc  SadTest.cc  WedgeUtilTest.cc  corner_match_test.cc  loopfilter_ref.h
test/api_test/: CMakeLists.txt
test/e2e_test/: E2eTestVectors.h  FrameQueue.cc  SvtAv1E2EFramework.cc  SvtAv1E2EParamsTest.cc  SvtAv1E2ETest.cc  VideoSource.cc
(+99 files in other folders)
